# docxfix

./: .gitignore  CLAUDE.md  COMMENT_THREADING_STATUS.md  NAMESPACE_FIXES.md  PROGRESS.txt  PROMPT.md  README.md  Test-DocxFiles.ps1  pyproject.toml  test_progressive_comments.py  test_word_baseline.py  test_word_comments.py
.claude/: settings.local.json
corpus/: README.md  comment-thread.docx  comment-thread.md  legal-list.docx  legal-list.md  list-numbering.md  mixed-insert-delete.docx  mixed-insert-delete.md  resolved-comment.docx  resolved-comment.md  section-breaks.md  sections.docx  sections.md  single-deletion.docx  single-deletion.md  single-insertion.docx  single-insertion.md  styled-numbering.docx  styled-numbering.md
docs/: comment-threading-investigation.md  future-phases-prd.md  mw4-spec-examples.md  phase-1-guide.md  phase-1-prd.md  phase-2-prd.md  phase-3-guide.md  project-outline.md
examples/: 01-simple.yaml  02-tracked-changes.yaml  03-comments.yaml  04-legal-list-numbering.yaml  05-heading-numbering.yaml  06-sections.yaml  07-combined.yaml  08-deterministic.json  batch-manifest.yaml  bdd_row_example.py  test-two-threads.yaml  word-replica.yaml  word-two-thread-replica.yaml
schemas/: README.md  dml-chart.xsd  dml-main.xsd  dml-wordprocesshape.xsd  dml-wordprocessingDrawing.xsd  dml-wordprocessingDrawing2010.xsd  markup-compatablity.xsd  opc-chartColors.xsd  opc-chartStyle.xsd  opc-coreProperties.xsd  opc-labelinfo.xsd  opc-markupCompatability.xsd  revision.xsd  revision2.xsd  shared-bibliography.xsd  shared-commonSimpleTypes.xsd  shared-math.xsd  (+5 more)
(+42 files in other folders)
